--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,23 @@
             <artifactId>spring-test</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
+        <!--引入jedis客户端-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+             <version>2.7.3</version>
+        </dependency>
+        <!--自定义序列化 开源的protostuff依赖的jar包-->
+        <dependency>
+            <groupId>com.dyuproject.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dyuproject.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>1.0.8</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>seckillpeng</finalName>
